--- a/code/4_TX_dw_analysis_socioeconomic.Rmd
+++ b/code/4_TX_dw_analysis_socioeconomic.Rmd
@@ -326,13 +326,17 @@ names(race_5yr_healthbased) <- c("%Race", "White_Viol", "Black_Viol",
 race_5yr_healthbased
 
 # plotting %POC: 
+census_sf <- census %>%
+  st_transform('+proj=longlat +datum=WGS84') %>%
+  filter(east_tx_flag == "yes")
+
 poc_pal <- colorNumeric(
   palette = viridis::viridis(20),
-  domain = census$estimate_poc_alone_per)
+  domain = census_sf$estimate_poc_alone_per)
 
 leaflet() %>%
   addProviderTiles(providers$CartoDB.VoyagerNoLabels, group = "Toner Lite") %>%
-  addPolygons(data = census,
+  addPolygons(data = census_sf,
               fillOpacity = 0.9,
               # opacity = 0.9,
               # stroke = TRUE,
@@ -340,11 +344,11 @@ leaflet() %>%
               color = ~poc_pal(estimate_poc_alone_per),
               # fillColor = ~poc_pal(estimate_poc_alone_per),
               weight = 1,
-              label = paste0("pwsid: ", census$pwsid,
-                             "; poc: ", census$estimate_poc_alone_per)) %>%
+              label = paste0("pwsid: ", census_sf$pwsid,
+                             "; poc: ", census_sf$estimate_poc_alone_per)) %>%
   addLegend("bottomright",
             pal = poc_pal,
-            values =  census$estimate_poc_alone_per,
+            values =  census_sf$estimate_poc_alone_per,
             title = "% POC",
             opacity = 1)
 
@@ -865,6 +869,11 @@ median(etx_immi$estimate_foreign_per, na.rm = T)
 # how does hcf  relate to poc, mhi, and sdwis violations: 
 analysis_keys <- keys$analysis_keys
 aff_analysis <- merge(aff, analysis_keys, by = "pwsid") 
+mean(aff_analysis$total_water_year) 
+# Mean just total water: 
+# East TX: $511.2519
+# TX: $545.5747
+
 
 # how does household cost factor relate to %POC?
 ggplot(aff_analysis, aes(x = hcf*100, 
@@ -938,7 +947,7 @@ aff_analysis <- merge(aff_TX, analysis_keys, by = "pwsid")
 # what does hcf look like spatially? 
 aff_analysis_sf <- aff_analysis %>%
   st_as_sf() %>%
-  st_transform(., crs = st_crs(demo$census))
+  st_transform('+proj=longlat +datum=WGS84')
 
 # mapping household cost factor across TX: 
 hcf_pal <- colorNumeric(
@@ -968,8 +977,16 @@ water_rate_pal <- colorNumeric(
   palette = c("#003049","#6b2c39", "#d62828", "#f77f00", "#fcbf49"),
   domain = aff_analysis_sf$total_water)
 
+# boundaries of all sabs: 
+sabs <- demo$census %>%
+  st_transform('+proj=longlat +datum=WGS84' )
+
 leaflet() %>%
   addProviderTiles(providers$CartoDB.VoyagerNoLabels, group = "Toner Lite") %>%
+  addPolygons(data = sabs, 
+              opacity = 9,
+              color = "grey",
+              weight = 1) %>%
   addPolygons(data = aff_analysis_sf, 
               fillOpacity = 0.9,
               # opacity = 9,
@@ -999,15 +1016,18 @@ median(etx_aff$total_water_year)
 median(etx_aff$total_sewer_year)
 
 
-# how does this compare to mhi? creating a map of MHI across east TX: 
-census <- demo$census
+# how does this compare to mhi? creating a map of MHI across east TX:
+census_sf <- demo$census %>%
+  st_transform('+proj=longlat +datum=WGS84') %>%
+  filter(east_tx_flag == "yes")
+
 mhi_pal <- colorNumeric(
   palette = viridis::viridis(9),
-  domain = census$estimate_mhi)
+  domain = census_sf$estimate_mhi)
 
 leaflet() %>%
   addProviderTiles(providers$CartoDB.VoyagerNoLabels, group = "Toner Lite") %>%
-  addPolygons(data = census,
+  addPolygons(data = census_sf,
               fillOpacity = 0.9,
               # opacity = 9,
               # stroke = TRUE, 
@@ -1019,7 +1039,7 @@ leaflet() %>%
                              "; hcf: ", round(aff_analysis_sf$total_water_year, 2))) %>%
   addLegend("bottomright",
             pal = mhi_pal,
-            values = census$estimate_mhi,
+            values = census_sf$estimate_mhi,
             title = "MHI",
             opacity = 1)
 
@@ -1118,13 +1138,13 @@ mhi %>%
             mean_poc = mean(estimate_poc_alone_per, na.rm = T)) %>%
   mutate(quintiles = c("0-20","20-40","40-60","60-80","80-100", "NA")) %>%
   relocate(quintiles, .after = mhi_bin)
-# lower 20% = $15,600 - $43,900 inclusive  
+# lower 20% = $23,600 - $43,700 inclusive  
 
 # checking out characteristics of this group: 
 lowest_quintile_mhi <- demo$census %>%
-  filter(estimate_mhi <= 43900) %>% 
+  filter(estimate_mhi <= 43700) %>% 
   filter(east_tx_flag == "yes")
-# there are 1,117, 363 of which are in east tx
+# there are 515, 145 of which are in east tx
 
 # interested in seeing where these are: 
 mhi_pal_mini <- colorNumeric(
@@ -1133,12 +1153,12 @@ mhi_pal_mini <- colorNumeric(
 
 leaflet() %>%
   addProviderTiles(providers$CartoDB.VoyagerNoLabels, group = "Toner Lite") %>%
-  addPolygons(data = mhi %>% st_as_sf(),
+  addPolygons(data = mhi %>% st_as_sf() %>% st_transform('+proj=longlat +datum=WGS84'),
               fillOpacity = 0.9,
               color = ~mhi_pal_mini(estimate_mhi),
               weight = 1,
               label = paste0("pwsid: ", mhi$pwsid)) %>%
-  addPolygons(data = lowest_quintile_mhi,
+  addPolygons(data = lowest_quintile_mhi%>% st_transform('+proj=longlat +datum=WGS84'),
               fillOpacity = 0.9,
               color = "red",
               weight = 1) %>%
@@ -1168,13 +1188,13 @@ lqi_hcf <- aff %>%
   left_join(keys$analysis_keys, "pwsid") %>%
   filter(east_tx_flag == "yes")
 
-ggplot(lqi_hcf, aes(x = estimate_mhi, y = hcf)) + 
-  geom_point(aes(color = total_water_year + total_sewer_year)) + 
-  scale_color_continuous(name = "$Water+Sewer/year") + 
+ggplot(lqi_hcf, aes(x = estimate_mhi, y = total_water_year + total_sewer_year)) + 
+  geom_point(aes(color = hcf)) + 
+  scale_color_continuous(name = "HCF") + 
   theme_minimal() + 
   labs(x = "Annual Median Household Income", 
-       y = "Household Cost Factor") + 
-  geom_vline(xintercept = 43900)
+       y = "Annual Total Household Water Cost") + 
+  geom_vline(xintercept = 43700)
 # Makes sense - they should be related since HCF is calculated using MHI
 
 
@@ -1305,23 +1325,26 @@ ggplot(all_unep, aes(x = flag,
   labs(x = "", y = "Percent of Labor Force Unemployed") 
 
 # what does this look like spatially?
-census <- demo$census 
-  # filter(east_tx_flag == "yes")
+census_sf <- demo$census %>%
+  st_transform('+proj=longlat +datum=WGS84') %>%
+  filter(east_tx_flag == "yes")
+
 unemp_pal <- colorNumeric(
   palette = viridis::viridis(9),
-  domain = census$estimate_laborforce_unemployed_per)
+  domain = census_sf$estimate_laborforce_unemployed_per)
 
 leaflet() %>%
   addProviderTiles(providers$CartoDB.VoyagerNoLabels, group = "Toner Lite") %>%
-  addPolygons(data = census,
+  addPolygons(data = census_sf,
               fillOpacity = 0.9,
               color = ~unemp_pal(estimate_laborforce_unemployed_per),
               weight = 1,
-              label = paste0("pwsid: ", census$pwsid, 
-                             "; % unemp: ", census$estimate_laborforce_unemployed_per)) %>%
+              label = paste0("pwsid: ", census_sf$pwsid, 
+                             "; % unemp: ", 
+                             census_sf$estimate_laborforce_unemployed_per)) %>%
   addLegend("bottomright",
             pal = unemp_pal,
-            values = census$estimate_laborforce_unemployed_per,
+            values = census_sf$estimate_laborforce_unemployed_per,
             title = "% Unemployment",
             opacity = 1) 
 
@@ -1483,110 +1506,184 @@ cejst <- demo$cejst
 pwsids <- demo$census$pwsid
 census <- demo$census
 
-# will need to be ~crosswalked~
-tract_crosswalk <- aws.s3::s3read_using(read.csv, 
-                                         object = "s3://tech-team-data/pws_crosswalk/pws_census_tract_weighted_crosswalk.csv") %>%
-  select(-X) %>%
-  filter(pwsid %in% pwsids) %>%
-  # if the geoid is missing prefix 0, add it back in
-  mutate(tract_geoid = as.character(tract_geoid),
-         tract_geoid = case_when(
-           str_length(tract_geoid) == 10 ~ paste0(0, tract_geoid),
-           TRUE ~ tract_geoid
-         )) %>%
-  filter(!(is.na(tract_geoid)))
+# need census tract geographies: 
+tract_geo <- tidycensus::get_acs(
+  geography = "tract", 
+  variables = c(total_pop = "B01003_001"), 
+  state = c("TX"), 
+  year = 2020,
+  geometry = TRUE
+)
 
 # CEJST was made off of 2010 tract boundaries - will need to be crosswalked
 # for the crosswalk 
 tract_2010_2020_crosswalk <- read.table("https://www2.census.gov/geo/docs/maps-data/data/rel2020/tract/tab20_tract20_tract10_natl.txt", 
                                         sep = "|", header = TRUE)
-full_crosswalk <- merge(tract_crosswalk, tract_2010_2020_crosswalk, 
-                        by.x = "tract_geoid", 
+
+full_crosswalk <- merge(tract_geo, tract_2010_2020_crosswalk, 
+                        by.x = "GEOID", 
                         by.y = "GEOID_TRACT_20", all.x = TRUE)
 
-# merging based on 2010 geoids
-cejst_cross <- merge(cejst, 
-                     full_crosswalk, 
-                     by.x = "census_tract_2010_id", 
-                     by.y = "GEOID_TRACT_10", all.y = T) 
+cejst_2020 <- merge(cejst, full_crosswalk, by.x = "census_tract_2010_id", 
+                    by.y = "GEOID_TRACT_10", 
+                    all.x = T) %>%
+  select(GEOID, NAME, 
+         total_threshold_criteria_exceeded:percentage_of_tract_that_is_disadvantaged_by_area, 
+         geometry)
+
+# using areal weighted interpolation to calculate the % of tract that 
+# is disadv by area - should just do areal interpolation
+cejst_geo <- cejst_2020 %>%
+  st_as_sf() %>%
+  st_transform(., crs = "ESRI:102296") 
+
+census_sf <- census %>%
+  st_transform(., crs = "ESRI:102296") %>%  
+  filter(!st_is_empty(.))%>%
+  select(pwsid, geometry)
+
+interpolate <- areal::aw_interpolate(census_sf, tid="pwsid", 
+                                     source=cejst_geo, 
+                                     sid="GEOID", 
+                                     weight = "sum",
+                                     output="sf", 
+                                     intensive="percentage_of_tract_that_is_disadvantaged_by_area")
+
 
 # using weighted mean to calculate mean % disadvantaged for pwsids
-pwsid_disadv <- cejst_cross %>%
+pwsid_disadv <- interpolate %>%
   group_by(pwsid) %>%
-  summarize(per_disadv_weighted =
-              weighted.mean(percentage_of_tract_that_is_disadvantaged_by_area, 
-                            tract_parcel_weight, 
-                            na.rm = TRUE))
+  summarize(per_disadv_mean = mean(percentage_of_tract_that_is_disadvantaged_by_area)) %>%
+  as.data.frame() %>%
+  select(-geometry)
 
 # combining with key stats of interest: 
 key_stats <- keys$analysis_keys
 cejst_analysis <- merge(key_stats, pwsid_disadv, by = "pwsid", all.x = TRUE)
-# cejst_analysis <- cejst_analysis %>%
-#   filter(east_tx_flag == "yes")
+cejst_analysis <- cejst_analysis %>%
+  filter(east_tx_flag == "yes") %>%
+  st_transform(., crs = st_crs(tract_geo))
 
 # plotting by disadv status: 
 cejst_pal <- colorNumeric(
   palette = viridis::viridis(9),
-  domain = cejst_analysis$per_disadv_weighted)
+  domain = cejst_analysis$per_disadv_mean)
 
 leaflet() %>%
   addProviderTiles(providers$CartoDB.VoyagerNoLabels, group = "Toner Lite") %>%
   addPolygons(data = cejst_analysis,
               fillOpacity = 0.9,
-              color = ~cejst_pal(per_disadv_weighted),
+              color = ~cejst_pal(per_disadv_mean),
               weight = 1,
               label = paste0("pwsid: ", cejst_analysis$pwsid, 
-                             "; % disadv: ", cejst_analysis$per_disadv_weighted)) %>%
+                             "; % disadv: ", cejst_analysis$per_disadv_mean)) %>%
   addLegend("bottomright",
             pal = cejst_pal,
-            values = cejst_analysis$per_disadv_weighted,
+            values = cejst_analysis$per_disadv_mean,
             title = "% CEJST Disadv",
             opacity = 1) 
 
 # box plot to investigate each bracket: 
 dac_TX <- cejst_analysis %>%
-  select(pwsid, per_disadv_weighted) %>%
+  select(pwsid, per_disadv_mean) %>%
   as.data.frame() %>%
   select(-geometry) %>%
   mutate(flag = "TX")
-mean(dac_TX$per_disadv_weighted, na.rm = T)
+mean(dac_TX$per_disadv_mean, na.rm = T)
 
 dac_eTX <- cejst_analysis %>%
-  select(pwsid, east_tx_flag, per_disadv_weighted) %>%
+  select(pwsid, east_tx_flag, per_disadv_mean) %>%
   as.data.frame() %>%
   select(-geometry) %>%
   filter(east_tx_flag == "yes") %>%
   select(-east_tx_flag) %>%
   mutate(flag = "East TX")
-mean(dac_eTX$per_disadv_weighted, na.rm = T)
+mean(dac_eTX$per_disadv_mean, na.rm = T)
 
 all_dac <- rbind(dac_TX, dac_eTX)
 
 # running boxplot: 
 ggplot(all_dac, aes(x = flag,  
-                    y = per_disadv_weighted, 
+                    y = per_disadv_mean, 
                     fill = flag)) + 
   geom_violin(alpha = 0.5) + 
   scale_fill_discrete(name = "") +
   theme_minimal()  + 
-  labs(x = "", y = "Percent of PWSID Disadv by CEJST") 
+  labs(x = "", y = "Percent of Service Area Disadv by CEJST") 
 
 # looking at data by quantile of disadv status: 
 cejst_analysis %>%
   as.data.frame() %>%
   select(-geometry) %>%
-  mutate(dac_bin = cut(per_disadv_weighted, 
-                       breaks = c(unique(quantile(per_disadv_weighted, 
-                                           probs = seq(0, 1, by = 0.10), 
+  mutate(per_disadv_mean = as.numeric(per_disadv_mean)) %>%
+  mutate(dac_bin = cut(per_disadv_mean, 
+                       breaks = c(unique(quantile(per_disadv_mean, 
+                                           probs = seq(0, 1, by = 0.05), 
                                            na.rm = TRUE))), 
-                       include.lowest = TRUE)) %>%
+                       include.lowest = TRUE, 
+                       dig.lab = 18)) %>%
   group_by(dac_bin) %>%
   summarize(total_utilities = n(),
             paperwork_10yr = mean(paperwork_violations_10yr), 
             paperwork_5yr = mean(paperwork_violations_5yr), 
             health_10yr = mean(healthbased_violations_10yr), 
             health_5yr = mean(healthbased_violations_5yr), 
-            mean_mhi = mean(estimate_mhi, na.rm = T)) 
+            mean_mhi = mean(estimate_mhi, na.rm = T), 
+            per_poc  = mean(estimate_poc_alone_per, na.rm = T)) 
+
+# what does this look like in the form of a graph?
+ggplot(cejst_analysis, aes(x = per_disadv_mean, 
+                           y = estimate_mhi, color = healthbased_violations_5yr)) + 
+  geom_point() + 
+  theme_minimal() + 
+  labs(x = "% of SAB that is Disadvantaged", y = "Median Household Income") + 
+  scale_color_continuous(name = "Heath-based Violations (5yr)") + 
+  theme(legend.position = "bottom")
+
+# are there any clear correlations? 
+all_cor <- cor(cejst_analysis %>% 
+                 as.data.frame() %>%
+                 select(-east_tx_flag) %>%
+                 select(c(healthbased_violations_5yr,
+                          paperwork_violations_5yr, 
+                          paperwork_violations_10yr,
+                          healthbased_violations_10yr,
+                          estimate_mhi, 
+                          estimate_poc_alone_per, 
+                          per_disadv_mean)), 
+               use = "pairwise.complete.obs")
+
+cor_pvals <- cor.mtest(all_cor, conf.level = 0.95)
+cor_pvals$p
+
+corrplot(all_cor, method = 'ellipse', type = 'upper', 
+        p.mat = cor_pvals$p, insig = "p-value", sig.level = -1, 
+        mar=c(0,0,0,0))
+
+
+# can we link to which vulnerabilities are being exceeded?
+# Just grabbing counties in East TX
+east_tx <- read.csv("./data/raw/east_TX_counties.csv") %>%
+  select(-X) %>%
+  mutate(county_tidy = paste0(county_name, " County"))
+
+cejst_raw <- aws.s3::s3read_using(read.csv, 
+                                  object = "s3://tech-team-data/ej-data/cejest-v1/1.0-communities.csv") %>%
+  janitor::clean_names() %>%
+  filter(state_territory == "Texas") %>%
+  filter(county_name %in% east_tx$county_tidy)
+
+# grabbing mean percentile for each county: 
+percentiles <- cejst_raw[, endsWith(names(cejst_raw), '_percentile')]
+id_cols <- cejst_raw[,c("census_tract_2010_id", "county_name")]
+cejst_percentiles <- cbind(id_cols, percentiles)
+county_percentiles <- cejst_percentiles %>%
+  group_by(county_name) %>%
+  summarise(across(!c("census_tract_2010_id"), ~mean(.x, na.rm = T)))
+
+etx_percentiles <- county_percentiles %>%
+  summarise(across(!c("county_name"), ~mean(.x, na.rm = T))) %>%
+  pivot_longer(1:31)
 ```
 
 ## Investigating stats for cws in TX and comparisons across different scales:
@@ -1647,7 +1744,7 @@ tx_census <- tidycensus::get_acs(
   geography = "state", 
   variables = census_vars, 
   state = c("TX"), 
-  year = 2021,
+  year = 2020,
   geometry = TRUE
 )
 
@@ -1674,10 +1771,11 @@ summary(tx_wide)
 ################################################################################
 # grabbing East TX stats: 
 etx_census <- tidycensus::get_acs(
-  geography = "county", 
+  # geography = "county", 
+  geography = "tract", 
   variables = census_vars, 
   state = c("TX"),
-  year = 2021,
+  year = 2020,
   geometry = TRUE
 )
 
@@ -1695,7 +1793,7 @@ etx_wide <- pivot_wider(east_tx_geo,
                        names_from = c("variable"), 
                        values_from = c("estimate", "moe"))
 
-etx_wide <- etx_wide %>%
+etx_wide_per <- etx_wide %>%
   select(starts_with(c("estimate"))) %>%
   # calculating some columns where the denominator is not the total pop: 
   mutate(estimate_laborforce_unemployed = ((estimate_laborforce_unemployed/estimate_laborforce)*100), 
@@ -1707,8 +1805,31 @@ etx_wide <- etx_wide %>%
             ~((./estimate_total_pop)*100)) %>%
   mutate(estimate_poc_alone = (100 - estimate_white_alone))
 
-summary(etx_wide)
+summary(etx_wide_per)
 sum(etx_wide$estimate_total_pop)
+```
+
+## Where are POC located at the tract level?
+```{r}
+etx_wide_sf <- etx_wide %>%
+  mutate(percent_poc = (100*(estimate_total_pop - estimate_white_alone)/estimate_total_pop))
+
+poc_pal <- colorNumeric(
+  palette = viridis::viridis(9),
+  domain = etx_wide_sf$percent_poc)
+
+leaflet() %>%
+    addPolygons(data = etx_wide_sf,
+              fillOpacity = 0.3,
+              color = ~poc_pal(percent_poc),
+              weight = 1,
+              label = paste0("% poc: ", etx_wide_sf$percent_poc)) %>%
+  addProviderTiles(providers$CartoDB.VoyagerLabels, group = "Toner Lite") %>%
+  addLegend("bottomright",
+            pal = poc_pal,
+            values = etx_wide_sf$percent_poc,
+            title = "% POC",
+            opacity = 1) 
 ```
 
 ## Correlations between variables: 
@@ -1733,12 +1854,19 @@ all_cor <- cor(all_data %>%
                           estimate_hh_below_pov_per,
                           estimate_foreign_per,
                           estimate_poc_alone_per, 
-                          service_connections_count)), 
-               use = "pairwise.complete.obs")
+                          service_connections_count)) %>% 
+                          rename_with(~ str_remove(., "_alone_per"), everything()) %>%
+                          rename_with(~ str_remove(., "_per"), everything()) %>%
+                          rename_with(~ str_remove(., "estimate"), everything()) %>%
+                          rename_with(~ str_remove(., "_"), everything()), 
+               use = "pairwise.complete.obs") 
 
 cor_pvals <- cor.mtest(all_cor, conf.level = 0.95)
 cor_pvals$p
 
 corrplot(all_cor, method = 'ellipse', type = 'upper', 
-        p.mat = cor_pvals$p, insig = "p-value", sig.level = -1)
+        p.mat = cor_pvals$p, insig = "p-value", sig.level = -1, 
+        mar=c(0,0,0,0), 
+          tl.col = "black")
 ```
+
